Trying to fix alignment of thumbnail images when printed to PDF

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,6 +12,17 @@ img {
   border: 1px solid black;
 }
 
+#gallery img.thumb {
+  width: 93px;
+  height: 93px;
+}
+
+#gallery img.large {
+  width: 289px;
+  height: 289px;
+  float: left;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
@@ -199,6 +210,11 @@ footer {
   position:fixed;
   bottom:50px;
 }
+.large {
+  margin-right: 3px;
+  width: 289px;
+  height: 289px;
+}
 
 @media print, screen and (max-width: 960px) {
   
@@ -284,5 +300,10 @@ footer {
   }
   .badge {
     display:none;
+  }
+  #gallery img.large {
+    margin-right: 4px;
+    width: 290px;
+    height: 290px;
   }
 }
